# comp371-assignment

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildFreetype.cmake  BuildGLEW.cmake  BuildGLFW.cmake  BuildGLM.cmake
res/: UnitCubeVertices.txt
res/shader/: CubeFragment.shader  CubeVertex.shader  DepthMappingFragment.shader  Fragment.shader  GridFragment.shader  GridVertex.shader  Vertex.shader
src/: Board.cpp  Board.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  DirectionalLight.cpp  DirectionalLight.h  Material.cpp  Material.h  Model.cpp  Model.h  OBJloader.h  OBJloaderV2.h  PointLight.cpp  PointLight.h  Puzzle.cpp  Puzzle.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  geometryData.h  main.cpp
